--- a/src/resources/schema/definitions.yml
+++ b/src/resources/schema/definitions.yml
@@ -2518,35 +2518,37 @@
 - id: brand-logo
   description: >
     Provide definitions and defaults for brand's logo in various formats and sizes.
-  anyOf:
-    - string
-    - object:
-        closed: true
-        properties:
-          with:
-            schema:
-              object:
-                additionalProperties:
-                  schema:
-                    ref: brand-string-light-dark
-          small:
-            description: >
-              A link or path to the brand's small-sized logo or icon, or a link or path
-              to both the light and dark versions.
-            schema:
-              ref: brand-string-light-dark
-          medium:
-            description: >
-              A link or path to the brand's medium-sized logo, or a link or path
-              to both the light and dark versions.
-            schema:
-              ref: brand-string-light-dark
-          large:
-            description: >
-              A link or path to the brand's large- or full-sized logo, or a link or path
-              to both the light and dark versions.
-            schema:
-              ref: brand-string-light-dark
+  object:
+    closed: true
+    properties:
+      with:
+        schema:
+          object:
+            additionalProperties:
+              schema:
+                ref: brand-string-light-dark
+      small:
+        description: >
+          A link or path to the brand's small-sized logo or icon, or a link or path
+          to both the light and dark versions.
+        schema:
+          ref: brand-string-light-dark
+      medium:
+        description: >
+          A link or path to the brand's medium-sized logo, or a link or path
+          to both the light and dark versions.
+        schema:
+          ref: brand-string-light-dark
+      large:
+        description: >
+          A link or path to the brand's large- or full-sized logo, or a link or path
+          to both the light and dark versions.
+        schema:
+          ref: brand-string-light-dark
+
+- id: brand-named-logo
+  description: Names of customizeable logos
+  enum: [small, medium, large]
 
 - id: brand-color-value
   schema: string
